appId: com.idonagler.ShareBuy
---
# Action: saving a group

# Preconditions:
# - The group is visible in the search results
# - The group is unsaved

- assertVisible: ""
- tapOn: ""
- assertVisible: ""
