appId: com.idonagler.ShareBuy
---
# Action: Filter the search by category

# Preconditions:
# - The App is on the home screen

- tapOn:
    text: "Categories"
- tapOn:
    text: "Electronics" # Replace with an actual category in your app
- "hideKeyboard"
- assertVisible: "Electronics" # Adjust to a result that should appear
