appId: com.idonagler.ShareBuy
---
# Action: unsaving a group

# Preconditions:
# - The group is visible in the search results
# - The group is saved

- assertVisible: ""
- tapOn: ""
- assertVisible: ""
