appId: com.idonagler.ShareBuy
--- #test if users can write a chat message
- tapOn: ""
- tapOn: ", My Chats"
- tapOn:
    point: "50%,17%"
- tapOn: "Type a message..."
- inputText: "hello"
- tapOn: ""
- assertVisible: "hello"
