appId: com.idonagler.ShareBuy
--- #for saving a group, after searching the group
- assertVisible: ""
- tapOn: ""
- assertVisible: ""
- tapOn: ""
- tapOn: "Favorites"
- assertVisible: "${GROUP_NAME}"
